--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ DATABASE_PORT=5432
 JWT_ACCESS_SECRET=very-secrets-very-hard-access
 JWT_REFRESH_SECRET=very-secrets-very-hard-refresh
 SALT_ROUNDS=10
+RATE_LIMITING_TTL= 60,
+RATE_LIMITING_LIMIT= 100,
