--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ JWT_REFRESH_SECRET=very-secrets-very-hard-refresh
 SALT_ROUNDS=10
 RATE_LIMITING_TTL= 60,
 RATE_LIMITING_LIMIT= 100,
+SERVER_PORT=8000
