--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
+    "@nestjs/swagger": "^6.2.1",
     "@nestjs/throttler": "^4.0.0",
     "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.0",
