--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/throttler": "^4.0.0",
     "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
@@ -49,6 +50,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/app-root-path": "^1.2.4",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^11.0.1",
     "@types/jest": "29.2.4",
